--- a/pages/teste-api-01.html
+++ b/pages/teste-api-01.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/teste-api-01.css" />
     <title>Teste Api 01</title>
   </head>
   <body>
     <main class="bg-main">
-      <a href="pages/teste-api-01.html">PRIMEIRO TESTE</a>
-      <a href="pages/teste-api-02.html">Segundo TESTE</a>
+      <div class="container-main">
+        <div id="teste-api01">
+        </div>
+      </div>
     </main>
-    <script src="script/main.js"></script>
+    <script src="../script/teste-api-01.js"></script>
   </body>
 </html>
