--- a/00-Testes/index.html
+++ b/00-Testes/index.html
@@ -9,11 +9,73 @@
   </head>
   <body>
     <main class="container">
-      <header class="header"></header>
-      <nav class="nav"></nav>
+      <header class="header">
+        <div class="redes">
+          <ul >
+            <li>
+              <a href="#"
+                ><img src="img/header/github.svg" alt="icone do linkedin"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="img/header/intagran.svg" alt="icone do instagran"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="img/header/twitter.svg" alt="icone do twitter"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="img/header/linkedin.svg" alt="icone do linkedin"
+              /></a>
+            </li>
+          </ul>
+        <figure>
+          <img src="img/header/fotinha.svg" alt="Logo de varios computadores conectados">
+        </figure>
+        <div class="textos-header">
+          <h1>Testes Api</h1>
+          <h3>Diversas Api sendo testada na Página</h3>
+          <p>Renato França</p>
+        </div>
+        <div class="span">
+          <img src="img/header/FUNDO 01.svg" alt="pequeno icone">
+          <p>00</p>
+        </div>
+      </div>
+      </header>
+
+      <nav class="nav">
+          <figure class="nav01-itens">
+            <img src="img/nav01/html.png" alt="icone html">
+            <figcaption>HTML</figcaption>
+          </figure>
+          <figure class="nav01-itens">
+            <img src="img/nav01/css.png" alt="icone css">
+            <figcaption>CSS</figcaption>
+          </figure>
+          <figure class="nav01-itens">
+            <img src="img/nav01/js.png" alt="icone js.png">
+            <figcaption>JAVASCRIPT</figcaption>
+          </figure>
+          <figure class="nav01-itens">
+            <img src="img/nav01/angula.png" alt="icone angula.png">
+            <figcaption>ANGULAR</figcaption>
+          </figure>
+      </nav>
+
       <section class="section">
-        <header></header>
-        <article></article>
+        <header class="h-section01">
+          <h2>Teste Api 01</h2>
+          <h3>Esse teste tem como finalidade criar um usuário aleatório</h3>
+        </header>
+        <article class="article-01">
+          <div  id="teste-api01">
+          </div>
+        </article>
       </section>
       <aside class="aside">
         <div id="cotacoes" class="cotacoes"></div>
@@ -21,5 +83,7 @@
       <footer class="footer"></footer>
     </main>
     <script src="js/script.js"></script>
+    <script src="js/cotacoesApi.js"></script>
+    <script src="js/teste-api-01.js"></script>
   </body>
 </html>
