--- a/pages/teste-api-02.html
+++ b/pages/teste-api-02.html
@@ -8,11 +8,14 @@
     <title>Teste Api 02</title>
   </head>
   <body>
-    <a href="../index.html">Volta</a>
+    <div class="btn-foras-bg">
+    <a class="btn-fora" href="../index.html">Tela Inicial</a>
+    <button id="novaPesquisa" class="btn-fora">Reload</button>
+    </div>
     <section class="bg-section">
       <h1 class="titulo">Teste Api 02</h1>
       <h2 class="titu01">
-        Esse teste tem como finalidade ser um dicionário em Inglês
+        Esse teste tem como finalidade ser um dicionário da lingua Portuguesa
       </h2>
       <div class="container">
         <form class="formulario">
