--- a/index.html
+++ b/index.html
@@ -8,10 +8,81 @@
     <title>Teste Api 01</title>
   </head>
   <body>
-    <main class="bg-main">
-      <a href="pages/teste-api-01.html">PRIMEIRO TESTE</a>
+    <article class="container">
+      <!-- section 01 -->
+      <section>
+        <div class="itens">
+          <div class="teste">
+            <header>
+              <span>01</span>
+              <h2>Teste Api</h2>
+            </header>
+            <div class="teste-textos">
+              <h3>Usuário Aleatório</h3>
+              <p>
+                Essa página vai criar um usuário aleatório todas as vezes em que
+                clicado
+              </p>
+              <div class="btn-itens">
+                <a href="pages/teste-api-01.html">Conferir </a>
+              </div>
+            </div>
+          </div>
+          <figure>
+            <img src="img/index/foto-article01.png" alt="Foto do primeiro site" />
+          </figure>
+        </div>
+      </section>
+      <!-- sextion 02 -->
+      <section>
+        <div class="itens">
+          <figure>
+            <img src="img/index/foto-article02.png" alt="Foto do primeiro site" />
+          </figure>
+          <div class="teste">
+            <header>
+              <span>02</span>
+              <h2>Teste Api</h2>
+            </header>
+            <div class="teste-textos">
+              <h3>Usuário Aleatório</h3>
+              <p>
+                Essa página vai criar um usuário aleatório todas as vezes em que
+                clicado
+              </p>
+              <div class="btn-itens">
+                <a href="pages/teste-api-02.html">Conferir </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- sextion 03 -->
+      <section>
+        <div class="itens">
+          <div class="teste">
+            <header>
+              <span>03</span>
+              <h2>Teste Api</h2>
+            </header>
+            <div class="teste-textos">
+              <h3>Usuário Aleatório</h3>
+              <p>
+                Essa página vai criar um usuário aleatório todas as vezes em que
+                clicado
+              </p>
+              <div class="btn-itens">
+                <a href="pages/teste-api-03.html">Conferir </a>
+              </div>
+            </div>
+          </div>
+          <figure>
+            <img src="img/index/FOTO-PADRAO.png" alt="Foto do primeiro site" />
+          </figure>
+        </div>
+      </section>
       <a href="pages/teste-api-02.html">Segundo TESTE</a>
-    </main>
+    </article>
     <script src="script/main.js"></script>
   </body>
 </html>
