--- a/pages/teste-api-03.html
+++ b/pages/teste-api-03.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/teste-api-03.css" />
-    <title>Teste Api 02</title>
+    <title>Teste Api 03</title>
   </head>
   <body>
     <a href="../index.html">Volta</a>
@@ -15,11 +15,11 @@
         Esse teste tem como finalidade ser uma Galeria de fotos do <span>Mars Rovers</span> em marte
       </h2>
       <div class="container">
-        <div class="galeria">
-          <span class="doSpan" id="-">ᐊᐊ</span>
+        <div class="galeria" id="galeria">
+          <span class="doSpan" id="menos">ᐊᐊ</span>
           <figure id="tela">
           </figure>
-          <span class="doSpan" id="+">ᐅᐅ</span>
+          <span class="doSpan" id="mais">ᐅᐅ</span>
         </div>
       </div>
     </section>
