--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/teste-api-01.css" />
     <link rel="stylesheet" href="css/teste-api-02.css" />
     <link rel="stylesheet" href="css/teste-api-03.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8293541000998888"
+     crossorigin="anonymous"></script>
     <title>Sir Reinato - Testes Api</title>
   </head>
   <body>
